Refactoring into multiple submodules, reimplementing data layer